--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
-# replace with your username:
-name = mzac
+name = qolsys_client
 version = 0.0.1
 author = Zachary McGibbon
 author_email = zachary.mcgibbon@gmail.com
